--- a/index.html
+++ b/index.html
@@ -8,11 +8,41 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-   
 
+    <div class="container">
+        <header class="text-center text-light my-3">
+            <h1 class="mb-4">Todo App</h1>
+            <form class="search">
+                <input class="form-control" type="text" name="search" placeholder="Ara...">
+            </form>
+        </header>
+
+        <ul class="list-group text-light todos rounded-0">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Manavdan limon al</span>
+                <i class="fas fa-trash delete"></i>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Pazara git</span>
+                <i class="fas fa-trash delete"></i>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center ">
+                <span>Markete git</span>
+                <i class="fas fa-trash delete"></i>
+            </li>
+        </ul>
+        <form class="text-center my-4 add">
+            <label class="text-light mb-2 mt-3">Yeni İş Ekle</label>
+            <input type="text" name="add" class="form-control m-auto">
+        </form>
+
+    </div>
 
     <script src="js/externaljs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
